--- a/tasks/znoteaac.yml
+++ b/tasks/znoteaac.yml
@@ -38,7 +38,7 @@
 
 - name: Import ZnoteAAC database schema
   mysql_db:
-    name: forgottenserver
+    name: sabrehaven
     state: import
     target: /home/otsmanager/www/public_html/engine/database/znote_schema.sql
     login_unix_socket: /var/run/mysqld/mysqld.sock
